tests/bad/caseWrongType2.vshs
// Wrong type in `case` pattern matching.

a :: Int = case 10 of {
	10 -> 1;
	true -> 2
}